--- a/config/database.yml
+++ b/config/database.yml
@@ -78,17 +78,17 @@ test:
 #   production:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
-# production:
-#   <<: *default
-#   database: paeq-backend_production
-#   username: paeq-backend
-#   password: <%= ENV['PAEQ-BACKEND_DATABASE_PASSWORD'] %>
-
 production:
-  adapter: <YOUR DATABASE ENGINE>
-  encoding: utf8
-  database: <%= ENV['RDS_DB_NAME'] %>
-  username: <%= ENV['RDS_USERNAME'] %>
-  password: <%= ENV['RDS_PASSWORD'] %>
-  host: <%= ENV['RDS_HOSTNAME'] %>
-  port: <%= ENV['RDS_PORT'] %>
+  <<: *default
+  database: paeq-backend_production
+  username: paeq-backend
+  password: <%= ENV['PAEQ-BACKEND_DATABASE_PASSWORD'] %>
+
+# production:
+#   adapter: <YOUR DATABASE ENGINE>
+#   encoding: utf8
+#   database: <%= ENV['RDS_DB_NAME'] %>
+#   username: <%= ENV['RDS_USERNAME'] %>
+#   password: <%= ENV['RDS_PASSWORD'] %>
+#   host: <%= ENV['RDS_HOSTNAME'] %>
+#   port: <%= ENV['RDS_PORT'] %>
